--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
     "description": "",
     "publisher": "owaisalhashimi",
     "repository": {
-        "url": "https://github.com/owaisalhashimi"
+        "url": "https://github.com/owaisalhashimi/js-stream-snippets/"
     },
     "version": "1.0.4",
     "engines": {
